# os_lab_2

./: CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json  run.sh
doc/: report2.docx
src/: in.txt  main.c  out.txt
